refactor: replace getter methods with record accessors in SubscriberDefinition